--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,9 @@
   width: 0.875em;
   height: 0.875em;
 }
-/******* graphics changes ******/
+/************ graphics changes ************/
+
+/******* header ******/
 
 .title-bar { background-color: #fff; color: #000; }
 .topbar__search input { background-color: #f8f8f8; color: #000; }
@@ -44,12 +46,18 @@
 
 .navbar { background-color: #f8f8f8; color: #000; }
 .main-nav__link a { color: #000; }
+.main-nav__link--active a { box-shadow: inset 0 -4px 0 0 var(--primary); }
+.main-nav__link a:hover, .main-nav__link a:focus { color: #000; }
+
+
+/******* backgrounds ******/
 
 #content section,
 .home-section:nth-of-type(2n+1),
 .home-section:nth-of-type(2n) { background-color: #fff; }
-.home-section { position: relative; }
-.home-section:after {
+#content section { position: relative; }
+#content section:after {
+  display: block;
   content: '';
   width: 75rem;
   height: 3px;
@@ -58,9 +66,39 @@
   top: calc(100% - 4px);
   left: calc(50% - (75rem / 2));
 }
+#content section:first-of-type:after { display: none; }
+#content section:last-of-type:after { display: none; }
+
+.off-canvas-wrapper { background-color: #fff; }
+
+/******* headers ******/
+
+.hero-heading { font-size: 4rem; text-shadow: none; }
+
+#metrics .heading2,
+#content section .heading3 { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; }
+#content section h3.section-heading { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; margin-bottom: 50px; }
+#content section h3.section-heading:before { display: none; }
+
+#content section h3.section-heading#assemblies-count,
+#content section h3.section-heading.order-by__text { font-size: 1.125em; font-weight: 600; text-transform: uppercase; margin-bottom: 1rem; }
+#content section h3.section-heading#assemblies-count:before,
+#content section h3.section-heading.order-by__text:before { display: inline-block; }
 
 
-.button { color: #000; border-radius: 15px; }
+/******* cards ******/
+
+#highlighted-processes .card.card--mini,
+#highlighted-assemblies .card.card--mini { background-color: #fff8e5; border-radius: 15px; color: #000; }
+#highlighted-processes .card.card--mini .card__link,
+#highlighted-assemblies .card.card--mini .card__link { color: #000; font-weight: bold; font-size: 1.2rem; }
+.card.card--mini:hover,
+.card.card--mini:hover .card__link { text-decoration: none; color: #4f4f4f; }
+
+
+/******* buttons ******/
+
+.button { color: #000; }
 .button:hover { color: #000; }
 .button--sc.large {
   display: inline-block;
@@ -68,7 +106,8 @@
   font-size: 1.25rem;
   text-transform: none;
 }
-.button.hollow { color: #000; background-color: var(--primary); }
+.button.hollow { color: #000; background-color: var(--primary); border-radius: 15px; }
+.button.hollow.small { border-radius: 4px; }
 .button.hollow:hover { color: #000; }
 .button.tiny {
   border-radius: 4px;
@@ -84,4 +123,4 @@
 }
 .button.tiny.opinion-toggle--meh { border-radius: 0; }
 .button--muted { color: #fff; }
-.hero-cta { padding: 1rem 1.5rem }
+.hero-cta { padding: 1rem 1.5rem; border-radius: 15px; }
