--- a/decidim-assemblies-extended/app/cells/decidim/assemblies/assembly_member/new_show.erb
+++ b/decidim-assemblies-extended/app/cells/decidim/assemblies/assembly_member/new_show.erb
@@ -45,14 +45,12 @@
         </div>
       </div>
       <div class="card__text card--picture-offset">
-        <div class='affiliation'>
-          <strong><%= affiliation %></strong>
-        </div>
+        <div class='affiliation'><%= affiliation %></div>
         <div class='representation'>
           <small><strong><%= representation %></strong></small>
         </div>
         <div>
-          <small><strong><%= position %></strong></small>
+          <small><%= position %></small>
         </div>
         <div class="text-small">
           <%= t("decidim.assembly_members.assembly_member.designated_on") %>
