--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,14 @@
  *= require decidim
  *= require decidim/core/extended/application.css
  *= require decidim/assemblies/extended/application.css
+ *= require decidim/processes/extended/application.css
  *= require_tree .
  *= require_self
  */
+
+/*** colors ***/
+/* pale-yellow: #fff8e5; */
+
 
 .comment__votes span {
   font-size: 1.3em;
@@ -27,6 +32,14 @@
   height: 0.875em;
 }
 /************ graphics changes ************/
+
+/******* global ******/
+a,
+.card__link { color: var(--secondary); }
+a:hover, a:focus,
+.card__link:hover, .card__link:focus { color: var(--secondary); }
+a:focus { outline: none; }
+
 
 /******* header ******/
 
@@ -50,17 +63,28 @@
 .main-nav__link a:hover, .main-nav__link a:focus { color: #000; }
 
 
+/******* space shared elements ******/
+
+.process-nav__link:hover,
+.process-nav__link:focus,
+.process-nav__link { color: #000; }
+
+.process-header__hashtag a { color: var(--primary); }
+.process-header__hashtag a:hover, .process-header__hashtag a:focus { color: #fff8e5; }
+
+.definition-data__title { color: var(--secondary); }
+
 /******* backgrounds ******/
 
 #content section,
 .home-section:nth-of-type(2n+1),
 .home-section:nth-of-type(2n) { background-color: #fff; }
-#content section { position: relative; }
-#content section:after {
+section#metrics, #content section { position: relative; clear: both; }
+section#metrics, #content section.home-section:after {
   display: block;
   content: '';
   width: 75rem;
-  height: 3px;
+  height: 2px;
   background-color: #000;
   position: absolute;
   top: calc(100% - 4px);
@@ -68,28 +92,40 @@
 }
 #content section:first-of-type:after { display: none; }
 #content section:last-of-type:after { display: none; }
+.columns .section { clear: both; }
 
 .off-canvas-wrapper { background-color: #fff; }
+
+#participatory_process-statistics { margin-bottom: 0px; }
 
 /******* headers ******/
 
 .hero-heading { font-size: 4rem; text-shadow: none; }
 
 #metrics .heading2,
-#content section .heading3 { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; }
-#content section h3.section-heading { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; margin-bottom: 50px; }
-#content section h3.section-heading:before { display: none; }
+#content section.home-section .heading3 { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; }
+#content section.home-section h3.section-heading { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; margin-bottom: 50px; }
+#content section.home-section h3.section-heading:before { display: none; }
 
 #content section h3.section-heading#assemblies-count,
-#content section h3.section-heading.order-by__text { font-size: 1.125em; font-weight: 600; text-transform: uppercase; margin-bottom: 1rem; }
+#content section.home-section h3.section-heading.order-by__text { font-size: 1.125em; font-weight: 600; text-transform: uppercase; margin-bottom: 1rem; }
 #content section h3.section-heading#assemblies-count:before,
-#content section h3.section-heading.order-by__text:before { display: inline-block; }
+#content section.home-section h3.section-heading.order-by__text:before { display: inline-block; }
+
+
+/******* main page ******/
+.content-block-icon { width: 60px; height: 60px; }
+.home-bullet__desc { width: calc(100% - 60px) }
 
 
 /******* cards ******/
 
+.card.card--mini, .card-grid .card, .card-grid .chart-tooltip,
+.card-grid .conference-registration, .card-grid .conference-speaker .speaker-bio,
+.conference-speaker .card-grid .speaker-bio,
+.card-grid .add-message, .card-grid .comment-thread { overflow: hidden; }
 #highlighted-processes .card.card--mini,
-#highlighted-assemblies .card.card--mini { background-color: #fff8e5; border-radius: 15px; color: #000; }
+#highlighted-assemblies .card.card--mini { background-color: #fff8e5; border-radius: 15px; color: #000; overflow: hidden; }
 #highlighted-processes .card.card--mini .card__link,
 #highlighted-assemblies .card.card--mini .card__link { color: #000; font-weight: bold; font-size: 1.2rem; }
 .card.card--mini:hover,
@@ -99,7 +135,7 @@
 /******* buttons ******/
 
 .button { color: #000; }
-.button:hover { color: #000; }
+.button:hover, .button:focus { color: #000; outline-offset: unset; }
 .button--sc.large {
   display: inline-block;
   width: auto;
@@ -108,7 +144,7 @@
 }
 .button.hollow { color: #000; background-color: var(--primary); border-radius: 15px; }
 .button.hollow.small { border-radius: 4px; }
-.button.hollow:hover { color: #000; }
+.button.hollow:hover, .button.hollow:focus { color: #000; outline-offset: unset; }
 .button.tiny {
   border-radius: 4px;
 }
@@ -124,3 +160,18 @@
 .button.tiny.opinion-toggle--meh { border-radius: 0; }
 .button--muted { color: #fff; }
 .hero-cta { padding: 1rem 1.5rem; border-radius: 15px; }
+
+#highlighted-assemblies .card--full__image .button.expanded,
+#highlighted-assemblies .card--full__image .button.expanded:focus,
+#highlighted-assemblies .card--full__image .button.expanded:hover { color: #fff; background-color: var(--secondary); }
+#highlighted-processes .card--full__image .button.expanded,
+#highlighted-processes .card--full__image .button.expanded:focus,
+#highlighted-processes .card--full__image .button.expanded:hover { color: #fff; background-color: var(--secondary); }
+
+/******* assemblies *******/
+
+#assemblies-filter.inline-filters .dropdown-pane.is-open { padding: 5px 0px;  }
+#assemblies-filter.inline-filters .dropdown-pane li { border: none !important; }
+#assemblies-filter.inline-filters .dropdown-pane li a { padding: 5px 15px; color: #2c2930; }
+#assemblies-filter.inline-filters .dropdown-pane li a:hover { text-decoration: none; }
+#assemblies-filter.inline-filters button[data-toggle] { color: #2c2930; text-align: left; padding-left: 15px; }
