--- a/decidim-core-extended/app/views/decidim/pages/index.html.erb
+++ b/decidim-core-extended/app/views/decidim/pages/index.html.erb
@@ -18,13 +18,17 @@ edit_link(
 
   <% if @topics.any? %>
     <div class="row">
-      <h2 class="section-heading"><%= t ".topics" %></h2>
       <div class="row collapse">
         <div class="row small-up-1 smallmedium-up-2 mediumlarge-up-2 large-up-3 card-grid">
           <% @topics.each do |topic| %>
             <% if topic.pages.any? %>
               <div class="column">
                 <div class="card card--process card--mini">
+                  <% if topic.cover? %>
+                    <div class="card--full__image static_ppage" style="background-image:url(<%= topic.cover.url %>)"></div>
+                  <% else %>
+                    <div class="card--full__image static_ppage"></div>
+                  <% end %>
                   <div class="card__content">
                     <h3 class="card__title">
                       <%= link_to translated_attribute(topic.title), page_path(topic.pages.first), class: "card__link" %>
