trello card: 145 - metrics for survey - admin handling

--- a/decidim-surveys_extended/app/assets/stylesheets/decidim/surveys_extended/application.css
+++ b/decidim-surveys_extended/app/assets/stylesheets/decidim/surveys_extended/application.css
@@ -13,3 +13,17 @@
  *= require_tree .
  *= require_self
  */
+
+.metrics-label {
+  width: 20%;
+  display: inline-block;
+}
+
+.questionnaire-metrics .question-divider {
+  background-color: #fff8e5
+}
+
+.questionnaire-metrics .card-title .small {
+  font-weight: normal;
+  font-size: 85%;
+}
