--- a/decidim-core-extended/app/views/decidim/account/show.html.erb
+++ b/decidim-core-extended/app/views/decidim/account/show.html.erb
@@ -14,6 +14,16 @@
       <%= f.text_field :nickname %>
       <%= f.email_field :email %>
       <%= f.url_field :personal_url %>
+
+      <%= f.number_field :birth_year %>
+      <%= f.select :gender,
+                      @account.genders_for_select,
+                      { include_blank: t(".select_a_gender") },
+                      { multiple: false } %>      
+      <%= f.select :district,
+                      @account.districts_for_select,
+                      { include_blank: t(".select_a_district") },
+                      { multiple: false } %>
       <%= f.text_area :about, rows: 5, help_text: t('decidim.account.about_hint') %>
 
       <%= f.submit t(".update_account") %>
