trello cards: 146 & 136 - registration and authorization with inhabitant card

--- a/decidim-core-extended/app/assets/stylesheets/decidim/core/extended/application.css
+++ b/decidim-core-extended/app/assets/stylesheets/decidim/core/extended/application.css
@@ -24,6 +24,10 @@
   vertical-align: top;
 }
 
+/************* registration *************/
+
+.do-not-show { display: none; }
+
 /************* static pages *************/
 
 .card--full__image.static_ppage {
