--- a/decidim-core-extended/app/views/decidim/devise/registrations/new.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/registrations/new.html.erb
@@ -24,73 +24,22 @@
   <% end %>
 
   <div class="row">
+    <div class="columns small-centered small-12  smallmedium-8 medium-6 large-4">
+      <button class="button expanded button--sc home-section__cta"
+              id='registration-type-toggler'
+              title="Link do strony Procesy wyświetlającej wszystkie procesy"
+              data-show-inhabitant="<%= t('.show_inhabitant') %>"
+              data-show-default="<%= t('.show_default') %>"
+              >
+        <%= @form.card_number&.present? ? t('.show_default') : t('.show_inhabitant') %>
+      </button>
+    </div>
     <div class="columns large-6 medium-10 medium-centered">
-
-      <%= decidim_form_for(@form, namespace: "registration", as: resource_name, url: registration_path(resource_name), html: { class: "register-form new_user", id: "register-form" }) do |f| %>
-        <%= invisible_captcha %>
-        <div class="card">
-          <div class="card__content">
-            <%= form_required_explanation %>
-
-            <div class="user-person">
-              <div class="field">
-                <%= f.text_field :name, help_text: t(".username_help") %>
-              </div>
-            </div>
-
-            <div class="user-nickname">
-              <div class="field">
-                <%= f.text_field :nickname, help_text: t(".nickname_help", organization: current_organization.name), prefix: { value: "@", small: 1, large: 1 } %>
-              </div>
-            </div>
-
-            <div class="field">
-              <%= f.email_field :email %>
-            </div>
-
-            <div class="field">
-              <%= f.password_field :password, help_text: t(".password_help", minimun_characters: NOBSPW.configuration.min_password_length), autocomplete: "off" %>
-            </div>
-
-            <div class="field">
-              <%= f.password_field :password_confirmation %>
-            </div>
-          </div>
-        </div>
-
-        <div class="card" id="card__tos">
-          <div class="card__content">
-            <h3><%= t(".tos_title") %></h3>
-
-            <div class="field">
-              <%= f.check_box :tos_agreement, label: t(".tos_agreement", link: link_to(t(".terms"), page_path("terms-and-conditions"), target: '_blank')) %>
-            </div>
-            <div class="field">
-              <%= f.check_box :rodo_agreements, label: t(".rodo_agreements", link: link_to(t(".rodo_link"), 'https://bo.gdynia.pl/Polityka_Prywatnosci_serwisu_www.bo.gdynia.pl_.html', target: '_blank')) %>
-            </div>
-          </div>
-        </div>
-
-        <div class="card" id="card__newsletter">
-          <div class="card__content">
-            <h3><%= t(".newsletter_title") %></h3>
-              <div class="field">
-                <%= f.check_box :newsletter, label: t(".newsletter"), checked: @form.newsletter %>
-              </div>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card__content">
-            <div class="actions">
-              <%= f.submit t("devise.registrations.new.sign_up"), class: "button expanded" %>
-            </div>
-            <%= yield :devise_links %>
-          </div>
-        </div>
-      <% end %>
+      <%= render "decidim/devise/registrations/inhabitant_card_form", form: @form, visibility_class: @form.card_number&.present? ? nil : 'do-not-show' %>
+      <%= render "decidim/devise/registrations/form", form: @form, visibility_class: @form.card_number&.present? ? 'do-not-show' : nil %>
     </div>
   </div>
 </div>
 </div>
+<%= javascript_include_tag "decidim/core/extended/registration_types_handler" %>
 <%= render "decidim/devise/shared/newsletter_modal" %>
