--- a/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
+++ b/decidim-assemblies-extended/app/views/decidim/assemblies/admin/assemblies/_form.html.erb
@@ -142,6 +142,14 @@
   <div class="card-section">
 
     <div class="row column">
+      <%= form.email_field :contact_email %>
+    </div>
+
+    <div class="row column">
+      <%= form.text_field :contact_phone %>
+    </div>
+
+    <div class="row column">
       <%= form.text_field :contact_address %>
     </div>
 
