--- a/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
+++ b/decidim-processes-extended/app/views/decidim/participatory_processes/admin/participatory_processes/_form.html.erb
@@ -106,6 +106,14 @@
     </div>
 
     <div class="row column">
+      <%= form.email_field :contact_email %>
+    </div>
+
+    <div class="row column">
+      <%= form.text_field :contact_phone %>
+    </div>
+
+    <div class="row column">
       <%= form.text_field :contact_address %>
     </div>
   </div>
