--- a/decidim-core-extended/app/cells/decidim/content_blocks/how_to_participate/show_new.erb
+++ b/decidim-core-extended/app/cells/decidim/content_blocks/how_to_participate/show_new.erb
@@ -1,50 +1,44 @@
 <section class="extended home-section">
   <div class="wrapper-home">
     <div class="row column text-center">
-      <h3 class="heading3"><%= t("decidim.pages.home.extended.how_to_participate") %></h3>
+      <h3 class="heading3"><%= t("decidim.pages.home.extended.what_can_i_do") %></h3>
     </div>
     <div class="row small-up-1 medium-up-3 home-bullets">
       <div class="column">
         <div class="home-bullet">
           <div class="home-bullet__icon">
-            <%#= icon "meetings", role: "img", "aria-hidden": true %>
-            <%= image_tag asset_path("decidim/conversation_clouds.svg"), alt: 'dymki rozmowy', class: 'content-block-icon' %>
-          </div>
-          <div class="home-bullet__desc">
-            <h4 class="heading4"><%= t("decidim.pages.home.extended.meetings") %></h4>
-            <p><%= t("decidim.pages.home.extended.meetings_explanation") %></p>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="home-bullet">
-          <div class="home-bullet__icon">
-            <%#= icon "debates", role: "img", "aria-hidden": true %>
-            <%= image_tag asset_path("decidim/people.svg"), alt: 'czworka ludzi', class: 'content-block-icon' %>
-          </div>
-          <div class="home-bullet__desc">
-            <h4 class="heading4"><%= t("decidim.pages.home.extended.debates") %></h4>
-            <p><%= t("decidim.pages.home.extended.debates_explanation") %></p>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="home-bullet">
-          <div class="home-bullet__icon">
-            <%#= icon "proposals", role: "img", "aria-hidden": true %>
             <%= image_tag asset_path("decidim/icon_gears.svg"), alt: 'kola zebate', class: 'content-block-icon' %>
           </div>
           <div class="home-bullet__desc">
-            <h4 class="heading4"><%= t("decidim.pages.home.extended.proposals") %></h4>
-            <p><%= t("decidim.pages.home.extended.proposals_explanation") %></p>
+            <h4 class="heading4"><%= link_to t("decidim.pages.home.extended.processes"), decidim_participatory_processes.participatory_processes_path %></h4>
+            <p><%= t("decidim.pages.home.extended.processes_explanation") %></p>
+            <p><%= link_to t("decidim.pages.home.extended.processes_link"), decidim_participatory_processes.participatory_processes_path %></p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="columns small-centered small-10
-                smallmedium-8 medium-6 large-4">
-        <%= link_to t("decidim.pages.home.extended.more_info", resource_name: translated_attribute(current_organization.name, current_organization)), decidim.page_path("faq"), class: "button expanded hollow button--sc" %>
+      <div class="column">
+        <div class="home-bullet">
+          <div class="home-bullet__icon">
+            <%= image_tag asset_path("decidim/people.svg"), alt: 'czworka ludzi', class: 'content-block-icon' %>
+          </div>
+          <div class="home-bullet__desc">
+            <h4 class="heading4"><%= link_to t("decidim.pages.home.extended.assemblies"), decidim_assemblies.assemblies_path %></h4>
+            <p><%= t("decidim.pages.home.extended.assemblies_explanation") %></p>
+            <p><%= link_to t("decidim.pages.home.extended.assemblies_link"), decidim_assemblies.assemblies_path %></p>
+          </div>
+        </div>
+      </div>
+      <div class="column">
+        <div class="home-bullet">
+          <div class="home-bullet__icon">
+            <%= image_tag asset_path("decidim/conversation_clouds.svg"), alt: 'dymki rozmowy', class: 'content-block-icon' %>
+          </div>
+          <div class="home-bullet__desc">
+            <h4 class="heading4"><%= link_to t("decidim.pages.home.extended.help"), decidim.pages_path %></h4>
+            <p><%= t("decidim.pages.home.extended.help_explanation") %></p>
+            <p><%= link_to t("decidim.pages.home.extended.help_link"), decidim.pages_path %></p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
