--- a/decidim-core-extended/app/views/decidim/devise/invitations/edit.html.erb
+++ b/decidim-core-extended/app/views/decidim/devise/invitations/edit.html.erb
@@ -45,7 +45,7 @@
               <%= f.check_box :tos_agreement, required: "required", label: t("tos_agreement", scope: "decidim.devise.registrations.new", link: link_to(t("terms", scope: "decidim.devise.registrations.new"), page_path("terms-and-conditions"), target: "_blank")) %>
             </div>
             <div class="field">
-              <%= f.check_box :rodo_agreements, required: "required", label: t("rodo_agreements", scope: "decidim.devise.registrations.new", link: link_to(t("rodo_link", scope: "decidim.devise.registrations.new"), 'https://bo.gdynia.pl/Polityka_Prywatnosci_serwisu_www.bo.gdynia.pl_.html', target: '_blank')) %>
+              <%= f.check_box :rodo_agreements, required: "required", label: t("rodo_agreements", scope: "decidim.devise.registrations.new", link: link_to(t("rodo_link", scope: "decidim.devise.registrations.new"), 'https://konsultujemy.gdynia.pl/pages/rodo', target: '_blank')) %>
             </div>
           </div>
         </div>
