trello card: 165 - translations and styles fix

--- a/decidim-core-extended/app/cells/decidim/content_blocks/how_to_participate/show_new.erb
+++ b/decidim-core-extended/app/cells/decidim/content_blocks/how_to_participate/show_new.erb
@@ -3,7 +3,7 @@
     <div class="row column text-center">
       <h3 class="heading3"><%= t("decidim.pages.home.extended.what_can_i_do") %></h3>
     </div>
-    <div class="row small-up-1 medium-up-3 home-bullets">
+    <div class="row small-up-1 medium-up-3 home-bullets" style="margin-bottom: 20px;">
       <div class="column">
         <div class="home-bullet">
           <div class="home-bullet__icon">
