--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,6 +62,11 @@ a:focus { outline: none; }
 .main-nav__link--active a { box-shadow: inset 0 -4px 0 0 var(--primary); }
 .main-nav__link a:hover, .main-nav__link a:focus { color: #000; }
 
+.off-canvas .topbar__user__login { border-top: none; border-bottom: none; }
+.usermenu-off-canvas-holder .usermenu-off-canvas a,
+.hide-for-medium .topbar__user__login a { color: #e8e8e8; }
+.off-canvas .close-button { color: #2c2930; }
+
 
 /******* space shared elements ******/
 
@@ -73,6 +78,10 @@ a:focus { outline: none; }
 .process-header__hashtag a:hover, .process-header__hashtag a:focus { color: #fff8e5; }
 
 .definition-data__title { color: var(--secondary); }
+
+.floating-helper-container { min-height: 20px; }
+#floating-helper-tip { z-index: 5; }
+.floating-helper__trigger { position: absolute; }
 
 /******* backgrounds ******/
 
@@ -179,3 +188,15 @@ section#metrics, #content section.home-section:after {
 #assemblies-filter.inline-filters .dropdown-pane li a { padding: 5px 15px; color: #2c2930; }
 #assemblies-filter.inline-filters .dropdown-pane li a:hover { text-decoration: none; }
 #assemblies-filter.inline-filters button[data-toggle] { color: #2c2930; text-align: left; padding-left: 15px; }
+
+/********* images *********/
+.external-link-container { display: inline-block; }
+.external-link-container img { margin-bottom: 16px; }
+a img + .external-link-indicator { left: 5px; bottom: 15px; top: unset; }
+
+/********* users *********/
+
+.help-text.help-text-form-required-fields { margin: 1rem 0; }
+.switch.tiny { height: auto; }
+
+.topbar__admin__link.topbar__edit__link { margin-left: 5px; }
