--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -113,7 +113,7 @@ section#metrics, #content section.home-section:after {
 
 /******* headers ******/
 
-.hero-heading { font-size: 4rem; text-shadow: none; }
+.hero-heading { font-size: 4rem; text-shadow: none; text-align: center; }
 
 #metrics .heading2,
 #content section.home-section .heading3 { font-size: 2em; font-weight: bold; text-align: center; text-transform: none; }
