--- a/decidim-core-extended/app/views/decidim/core/extended/groups/delete.html.erb
+++ b/decidim-core-extended/app/views/decidim/core/extended/groups/delete.html.erb
@@ -1,5 +1,5 @@
-<% add_decidim_page_title(t("delete_my_account", scope: "layouts.decidim.user_profile")) %>
-<% content_for(:subtitle) { t("delete_my_account", scope: "layouts.decidim.user_profile") } %>
+<% add_decidim_page_title(t("delete_group", scope: "layouts.decidim.user_profile")) %>
+<% content_for(:subtitle) { t("delete_group", scope: "layouts.decidim.user_profile") } %>
 
 <div class="wrapper">
     <!-- <div class="columns medium-9 medium-offset-3"> -->
@@ -15,18 +15,18 @@
         <p><%= t("decidim.group.delete.alert") %></p>
       </div>
       <p><%= t("decidim.group.delete.explanation") %></p>
-      <%= decidim_form_for(@form, url: decidim_core_extended.group_path(@user_group.nickname), method: :delete, namespace: "delete_user", html: { class: "user-form delete-account" }) do |f| %>
+      <%= decidim_form_for(@form, url: decidim_core_extended.group_path(@user_group.nickname), method: :delete, namespace: "delete_account", html: { class: "user-form delete-account" }) do |f| %>
         <div>
           <label>
             <span class="user-form__label"><%= t("activemodel.attributes.group.delete_reason") %></span>
-            <%= f.text_area :delete_reason, rows: 2, label: false %>
+            <%= f.text_area :delete_reason, rows: 2, label: false, id: 'delete_reason' %>
           </label>
         </div>
         <button class="button open-modal-button"><%= t("decidim.group.delete.confirm.title") %></button>
       <% end %>
       <div class="tiny reveal" id="deleteConfirm" data-reveal>
-        <%= decidim_form_for(@form, url: decidim_core_extended.group_path(@user_group.nickname), method: :delete, namespace: "delete_user_confirm", html: { class: "user-form delete-account-modal" }) do |f| %>
-          <%= f.hidden_field :delete_reason %>
+        <%= decidim_form_for(@form, url: decidim_core_extended.group_path(@user_group.nickname), method: :delete, html: { class: "user-form delete-account-modal" }) do |f| %>
+          <%= f.hidden_field :delete_reason, id: 'delete_account_delete_reason' %>
 
           <p><%= t("decidim.group.delete.confirm.question") %></p>
 
