--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -146,6 +146,30 @@ section#metrics, #content section.home-section:after {
 .card.card--mini:hover .card__link { text-decoration: none; color: #4f4f4f; }
 
 
+/******* forms ******/
+
+[type="text"], [type="password"], [type="date"], [type="datetime"],
+[type="datetime-local"], [type="month"], [type="week"], [type="email"],
+[type="number"], [type="search"], [type="tel"], [type="time"], [type="url"], [type="color"],
+select, .inline-filters button[data-toggle], textarea {
+  border: 1px solid #b8b8b8;
+  box-shadow: none;
+}
+
+.input-group-label:first-child, .user-nickname label.is-invalid-label .row > span:first-child:first-of-type {
+  border-color: #ec5840;
+}
+.input-group-label:first-child, .user-nickname label .row > span:first-child:first-of-type {
+  border-color: #b8b8b8;
+}
+
+#card__tos label { position: relative; text-align: left; line-height: 1.5; }
+#card__tos input { margin-right: 1rem; margin-bottom: 0; }
+#card__tos span.label-required { position: absolute; top: 0; left: 14px; margin-bottom: 0; }
+
+input:checked ~ .switch-paddle { background: var(--secondary); }
+
+
 /******* buttons ******/
 
 .button { color: #000; }
