--- a/decidim-core-extended/app/views/decidim/core/extended/authorizations/show.html.erb
+++ b/decidim-core-extended/app/views/decidim/core/extended/authorizations/show.html.erb
@@ -24,6 +24,9 @@
       </div>
     </div>
   <% else %>
+    <div class="callout announcement secondary">
+      <p><%= t("layouts.decidim.user_profile.inhabitant_card_authorization_info", img: icon("verified-badge", class: "author__verified")).html_safe %></p>
+    </div>
     <%= decidim_form_for(@form, url: decidim_core_extended.inhabitant_cards_path, as: :inhabitant_card, html: { autocomplete: "off" }) do |f| %>
       <input autocomplete="off" name="hidden" type="password" style="display:none;">
       <div class="columns large-12 end">
